# sqlite3-cmake

./: CMakeLists.txt  README.md
cmake/: sqlite3-config.cmake
