cmake_minimum_required( VERSION 3.15 )

project( SQLite
    VERSION 3.49.2
    LANGUAGES C
)

if( NOT DEFINED CMAKE_INSTALL_INCLUDEDIR )
    set( CMAKE_INSTALL_INCLUDEDIR "include" )
endif()

if( NOT DEFINED CMAKE_INSTALL_LIBDIR )
    set( CMAKE_INSTALL_LIBDIR "lib" )
endif()

set( SQLITE3_NAMESPACE SQLite )

set( SQLITE3_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR}/sqlite3 )
set( SQLITE3_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR}/cmake/sqlite3 )

set( SQLITE3_INCLUDES
    sqlite3/sqlite3.h
    sqlite3/sqlite3ext.h
)
set( SQLITE3_SOURCES
    ${SQLITE3_INCLUDES}

    sqlite3/shell.c
    sqlite3/sqlite3.c
)

add_library( SQLite INTERFACE ${SQLITE3_SOURCES} )
add_library( ${SQLITE3_NAMESPACE}::SQLite ALIAS SQLite )

target_include_directories( SQLite
    INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${SQLITE3_INSTALL_LIBDIR}>
)

install(
    EXPORT sqlite3-targets
    FILE sqlite3-targets.cmake
    NAMESPACE ${SQLITE3_NAMESPACE}::
    DESTINATION ${SQLITE3_INSTALL_LIBDIR}
)
install( FILES ${SQLITE3_INCLUDES} DESTINATION ${SQLITE3_INCLUDEDIR} )
install(
    TARGETS SQLite
    EXPORT sqlite3-targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
